# Selenium-Python-Framework

./: .gitignore  pyenv.cfg  pyproject.toml
pages/: base_page.py  home_page.py  login_page.py
pages/nav_bar/: elements_page.py
steps/: assert_steps.py  home_page_steps.py  login_page_steps.py  web_page_steps.py
steps/nav_bar_steps/: elements_steps.py
tests/: conftest.py  test_base.py  test_home_page.py  test_login_page.py
tests/webmodules/login/: test_login_page.py
tests/webmodules/nav_bar/: test_elements.py
utils/: constants.py  driver.py
utils/enums/: nav_bar_items.py
utils/env/: .env.prod
